--- a/notebook/transformer_block.ipynb
+++ b/notebook/transformer_block.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "98d43f20",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "23b59519",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "'\\nOverview of the LLM architecture being built here.\\n\\nInput -> Tokenization -> Embedding -> Stack of Transformer Blocks -> Output Layer\\n\\nTransformer Block:\\n    - Input\\n    - Residual Connection + Layer Norm -> Multi-Head Attention (with RoPE for positional encoding) -> Dropout -> Add Input (shortcut connection)\\n    - Residual Connection + Layer Norm -> Feed-Forward Network -> Dropout -> Add Previous (shortcut connection)\\n    - Output\\n\\nThe key improvements:\\n1. Shortcut connections (residual connections) around both attention and FFN components\\n2. Multiple stacked transformer blocks for deep representation\\n3. RoPE (Rotary Position Embedding) integrated directly into attention mechanism \\n   instead of separate positional encoding\\n4. Layer normalization before attention and FFN (Pre-LN architecture)\\n'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "8da47adb",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "c93ca9d7",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "d69a6be6",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "ef612744",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "5cb9828d",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "390cbaa8",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "ff48b45b",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "081d3825",
    "metadata": {},
    "outputs": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "4f561e8d",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "cde4f4e7",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        " 'ln2': RMSNorm()}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "cb1ef2ef",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "b18ef780",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "bd041064",
    "metadata": {},
    "outputs": [
@@ -392,7 +392,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss: 11.192449569702148\n"
+      "Loss: 11.239240646362305\n"
      ]
     }
    ],
@@ -410,6 +410,97 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d4a8e613",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e3888f24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blocks = [\n",
+    "    {\n",
+    "        \"att\": MultiHeadAttention(model_cfg[\"emb_dim\"], model_cfg[\"n_heads\"], model_cfg[\"head_dim\"], qk_norm=model_cfg[\"qk_norm\"]),\n",
+    "        \"ff\": FeedForward(model_cfg),\n",
+    "        \"ln1\": RMSNorm(model_cfg[\"emb_dim\"], eps=1e-6),\n",
+    "        \"ln2\": RMSNorm(model_cfg[\"emb_dim\"], eps=1e-6)\n",
+    "    }\n",
+    "    for _ in range(model_cfg[\"n_layers\"])  # Fixed: use '_' instead of 'number_of_layers'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "2ce30c7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Generate Loop\n",
+    "def generate(input_ids, max_new_tokens, blocks, temperature=1.0, top_k=None):\n",
+    "    for _ in range(max_new_tokens):\n",
+    "        x = tkn_emb(input_ids) * (model_cfg[\"emb_dim\"] ** 0.5)\n",
+    "        for block in blocks:\n",
+    "            sc = x\n",
+    "            x_norm = block[\"ln1\"](x)\n",
+    "            x_att = block[\"att\"](x_norm, mask=None)\n",
+    "            x = sc + x_att\n",
+    "\n",
+    "            sc = x\n",
+    "            x_norm = block[\"ln2\"](x).to(torch.bfloat16)\n",
+    "            x_ff = block[\"ff\"](x_norm)\n",
+    "            x = sc + x_ff\n",
+    "\n",
+    "        x = final_norm(x)\n",
+    "        logits = out_head(x[:, -1, :]) / temperature  # Focus on the last token only\n",
+    "\n",
+    "        if top_k is not None:\n",
+    "            v, index = torch.topk(logits, top_k)\n",
+    "            # Smallest values for each.\n",
+    "            smallest = v[:, -1].unsqueeze(1)\n",
+    "            logits[logits < smallest] = -float('Inf')\n",
+    "\n",
+    "        probs = logits.softmax(dim=-1)\n",
+    "        next_token = torch.multinomial(probs, num_samples=1)\n",
+    "        input_ids = torch.cat((input_ids, next_token), dim=1)\n",
+    "    \n",
+    "    return input_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fa1c53c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "17ac6b91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated: tensor([[24160, 14289, 15789, 45289,  8577, 10633, 46144, 39431, 26047, 25751]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_ids = torch.randint(0, model_cfg[\"vocab_size\"], (1, 5))\n",
+    "print(\"Generated:\", generate(start_ids, max_new_tokens=5, blocks=blocks))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "904d0912",
    "metadata": {},
    "outputs": [],
    "source": []
